--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -57,6 +57,7 @@
                         <option value="Reebok" {% if filters['marca'] == 'Reebok' %}selected{% endif %}>Reebok</option>
                         <option value="Hoka" {% if filters['marca'] == 'Hoka' %}selected{% endif %}>Hoka</option>
                         <option value="Caterpillar" {% if filters['marca'] == 'Caterpillar' %}selected{% endif %}>Caterpillar</option>
+                        <option value="Apertura de cuenta" {% if filters['marca'] == 'Apertura de cuenta' %}selected{% endif %}>Apertura de cuenta</option>
                     </select>
                 </div>
                 <div>
